cabal-version: 3.0
name: asn1-ber-inspect
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2023 Layer 3 Communications
category: Data
build-type: Simple
extra-doc-files: CHANGELOG.md

executable asn1-ber-inspect
  ghc-options: -Wall -O1
  main-is: Main.hs
  build-depends:
    , array-builder >= 0.1.3
    , asn1-ber-syntax >= 0.2
    , base >=4.16.4.0
    , byteslice >= 0.2.9
    , chronos >=1.1.5
    , text-short >= 0.1.5
  hs-source-dirs: app
  default-language: GHC2021
